[project]
name = "table2csv"
version = "0.1.0"
description = ""
authors = [
    {name = "v01d.dev",email = "v01d.dev.sh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.40.0,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pandas (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
